# autonomous-vehicle-communication

./: README.md
.metadata/: version.ini
COM_SSV/: .cproject  .project  Cpu0_Main.c  Lcf_Tasking_Tricore_Tc.lsl
COM_SSV/Configurations/: Configuration.h  lwipopts.h
COM_SSV/TriCore Debug (TASKING)/: .COM_SSV.elf.opt  COM_SSV.hex  COM_SSV.map  COM_SSV.mdf  Cpu0_Main.d  Cpu0_Main.src  TASKING_C_C___Compiler-Include_paths__-I_.opt  makefile  sources.mk  subdir.mk
PC_doipProgram/: doip_client.py  doip_messages.py  gui_doip_client.py  main_gui.py  test_client.py  uds_parser.py
RP4_controlClient/config/: vsomeip.json
RP4_controlClient/include/: hexwatcher.hpp  motor.hpp  someip.hpp
RP4_controlClient/src/: ethernet_test.py  led.cpp  motor.cpp  reprogramming.cpp
RP4_doipGateway/: DoIP_gateway.py  DoIP_gateway_before.py
SomeIP_OTA/: .cproject  .project  Lcf_Tasking_Tricore_Tc.lsl  Sota.c  Sota.h  Sys_Init.c  UDE_TC375.wsx  main.c  syscfg.h
SomeIP_OTA/Configurations/: Ifx_Cfg_SswUcb.c  lwipopts.h
SomeIP_OTA/examples/: DoIP.c  can-ethernet.c  someip.c  tcp_echo.c
iLLD_TC375_ADS_FreeRTOS_Basic/: .cproject  Cpu0_Main.c
iLLD_TC375_ADS_FreeRTOS_Basic/Configurations/: lwipopts.h
iLLD_TC375_ADS_FreeRTOS_Basic/TC375_FreeRTOS_lwIP/: .cproject  .project
iLLD_TC375_ADS_FreeRTOS_Basic/TriCore Debug (TASKING)/: .iLLD_TC375_ADS_FreeRTOS_Basic.elf.opt  Cpu0_Main.d  Cpu0_Main.src  Cpu1_Main.d  (+13 more)
ssv_controlClient/: CMakeLists.txt
ssv_controlClient/include/: js.hpp  led.hpp  reprogramming.hpp
ssv_controlClient/src/: hexwatcher.cpp  js.cpp  main.cpp  someip.cpp
(+1378 files in other folders)
